Fix horizontal overflow

--- a/src/Hte/SiteBundle/Resources/public/css/main.desktop.css
+++ b/src/Hte/SiteBundle/Resources/public/css/main.desktop.css
@@ -20,38 +20,33 @@
     padding-top: 100px;
   }
 }
-/* line 20, ../sass/_index.scss */
-#main .stagger {
-  margin-left: -15px;
-  margin-right: -15px;
-}
-/* line 24, ../sass/_index.scss */
+/* line 21, ../sass/_index.scss */
 #main .stagger .row {
   background-color: #FFF;
   margin-top: 40px;
   margin-bottom: 40px;
 }
-/* line 29, ../sass/_index.scss */
+/* line 26, ../sass/_index.scss */
 #main .stagger .row > .container {
   margin-right: auto;
   margin-left: auto;
 }
-/* line 34, ../sass/_index.scss */
+/* line 31, ../sass/_index.scss */
 #main .stagger .row .image-container {
   width: 100%;
 }
 @media (min-width: 768px) {
-  /* line 38, ../sass/_index.scss */
+  /* line 35, ../sass/_index.scss */
   #main .stagger .row .image-container {
     width: 50%;
     max-width: 480px;
   }
-  /* line 43, ../sass/_index.scss */
+  /* line 40, ../sass/_index.scss */
   #main .stagger .row .image-container img {
     width: 100%;
   }
 }
-/* line 51, ../sass/_index.scss */
+/* line 48, ../sass/_index.scss */
 #main a.h-button {
   margin-top: 30px;
 }
