--- a/src/Hte/SiteBundle/Resources/public/sass/_index.scss
+++ b/src/Hte/SiteBundle/Resources/public/sass/_index.scss
@@ -18,9 +18,6 @@
   }
 
   .stagger {
-    margin-left: -15px;
-    margin-right: -15px;
-
     .row {
       background-color: #FFF;
       margin-top: 40px;
